# replaceUmlaut

./: .ghci  .ghciTest  .gitignore  .hlint.yaml  ChangeLog.md  README.md  ReplaceUmlaut.OLDCABAL  ReplaceUmlaut.cabal  ReplaceUmlautDeisgn.md  TestSimple.cabal  cabal.full.project  cabal.project  cabal.project.w8  hie.yaml4cabal  markdowWithMeta copy.dtpl  markdowWithMeta.dtpl  nichtUmlaute.txt  package.yaml  stack.yaml  testDaten.bak  testDaten.txt  testMarkdown.bak  testMarkdown.md  testMarkdown0.md  testMarkdown00.md  testMarkdown0NEW.md  testMarkdown1.mdNEW  testcorona.bak
Lib/: DirTree.hs  FileHandling.hs  OpenClass.hs  ProcPandocDatei.hs  ProcTxt.hs  ProcWord.hs  ProcWord1.hs
OLDLib/: ProcPandocDatei.hs.orig  ProcTxt.hs  ProcWord.hs
app/: Main.hs
app4md/: Main.hs
covidcopy/: becker_afterCOVID  coronaBuch.yaml  coronavirus.ods  ein neu.json  goodhart_afterCOVID.txt  lufthansaAktienkurse.ods
src/: ClassMain.hs  ReplaceUmlaut.hs
src/Lib/: FileHandling.hs  OneMDfile.hs  ProcDirMD.hs  ProcPandocDatei.hs  ProcTextFile.hs  ProcTxt.hs  ProcWord.hs
srcOLD/: FileHandling.hs  OneMDfile.hs  ProcPandocDatei.hsold  ReplaceUmlaut.hs  ReplaceUmlautWithArgs.hs
srcOLD/Lib/: ProcPandocDatei.hs
srcOLD/test/: Testing.hs
test/: Testing.hs
test/Lib/: FileHandling_test.hs  ProcPandocDatei_test.hs  ProcTxt_test.hs  ProcWord_test.hs
testData/: 01blog1NEW  corona.txt  test4.md  testMarkdownNEW
testData2023/: test4orig.md  test80.md
testData2023 (copy)/: corona.txt  test4.md  testDaten.txt
testdata/: index copy  index.new  msg4procDir
testdata/originals/: index1.new
tests/: Testing.hs  Testing.hs.orig
tests/Lib/: DirTree_test.hs  FileHandling_test.hs  OneMDfile_test.hs  OpenClass_test.hs  ProcPandocDatei_test.hs  ProcText_test.hs  ProcTxt_test.hs  ProcWord_test.hs
unusedHaskell/: ProcPandocDatei.hs1  ProcPandocDatei.hs2
