cabal-version:  >= 1.10
name:           TestSimple
version:        0.1.0
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Lib.DirTree
      Lib.OpenClass
  other-modules:
      Paths_TestSimple
  hs-source-dirs:
      ./.
  ghc-options: -Wall
  build-depends:
      base ==4.*
  default-language: Haskell2010

executable foo
  main-is: ClassMain.hs  
  other-modules:
      Paths_TestSimple
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    --   TestSimple
    base ==4.*
  default-language: Haskell2010

test-suite test1
  type: exitcode-stdio-1.0
  main-is: Testing.hs
  other-modules:
      Lib.DirTree_test
      Lib.OpenClass_test
    --   Testing
    --   Paths_TestSimple
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
    --   TestSimple
    base ==4.*
  default-language: Haskell2010
